tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_malformed_shift_left_assign_tokenization.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserMalformedShiftLeftAssignTokenization;

fn main() -> i32 {
  let value = 2;
  value << = 1;
  return value;
}
